(fix svg overlay size on mobile)

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -1748,6 +1748,8 @@
   }
 
   .main-image {
+    max-width: 620px;
+
     .main-image-inner {
       z-index: 1;
       position: relative;
